5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1577_579.log
== SUBMITION (2019-03-14 23:25:21) 
-- CODE:
print("A UFAM tem" 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.186254
-- ERROR:
  File "/home/codebench/codes/1577/579/main.py", line 1
    print("A UFAM tem" 2016 - 1909, "anos de fundacao.")
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 23:25:35) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.137574
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
